--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="main">
   <h1 class="title">Список дел</h1>
   <table>
     <thead>
@@ -55,4 +55,6 @@
       </button>
     </div>
   </div>
-</body>
+
+  <!--  <router-outlet></router-outlet>-->
+</div>
