--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -1,44 +1,85 @@
-table,
-td,
-th {
-  border: 1px solid #333;
+header {
+  color: #b8cf69;
+  background: #3b474c;
+  font-family: 'Kalam', cursive;
+  font-size: 50px;
+  text-align: center;
+  padding: 5px 0;
 }
 
-table {
+#main {
+  font-family: 'Roboto', serif;
+  color: #1c1c1c;
+  padding: 20px;
+}
+
+#column-1 {
+  width: 50%;
+}
+
+#todo-table-box {
+  font-family: 'Roboto Slab', serif;
+  font-size: 20px;
+}
+
+#todo-table {
   border-collapse: collapse;
-  min-width: 800px;
+}
+
+th,
+td {
+  border: 1px solid darkgray;
+  padding: 5px;
+}
+
+th {
+  text-align: center;
+  background: #f5f5f5;
+}
+
+.p-table {
+  margin: 0;
 }
 
 .id {
-  min-width: 100%;
   text-align: center;
+  min-width: 30px;
 }
 
 .text {
-  padding: 10px;
+  width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  padding: 5px 15px;
 }
 
-.isDone {
-  padding: 10px;
+.is-done {
   text-align: center;
-  max-width: 1px;
+  min-width: 100px;
 }
 
-.title {
-  text-align: center;
+#button-box {
+  padding: 20px 0;
 }
 
-.space {
+#button-add {
+  width: 100%;
   height: 50px;
+  font-family: 'Roboto Slab', serif;
+  font-size: 20px;
+  color: #484848;
 }
 
-.button {
-  font-family: 'Roboto Medium', serif;
-  font-size: 16px;
-  width: 500px;
-  height: 50px;
+#add-task-container {
+  position: relative;
+  display: grid;
+  grid-template-columns: auto auto 1fr auto auto;
 }
 
-.inputText {
-  width: 500px;
+.add-task-space {
+  width: 10px;
+}
+
+#add-task-input {
+  width: 100%;
 }
