--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -11,10 +11,12 @@ header {
   font-family: 'Roboto', serif;
   color: #1c1c1c;
   padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 800px 1fr;
 }
 
 #column-1 {
-  width: 50%;
+  width: 100%;
 }
 
 #todo-table-box {
@@ -58,28 +60,57 @@ th {
   min-width: 100px;
 }
 
-#button-box {
+.add-task-button-container {
   padding: 20px 0;
 }
 
-#button-add {
+.button-add {
   width: 100%;
   height: 50px;
   font-family: 'Roboto Slab', serif;
   font-size: 20px;
   color: #484848;
+  background: #ecf8da;
+  border-radius: 10px;
+  border: 1px solid #808080;
 }
 
-#add-task-container {
+.button-add:focus {
+  outline: 0;
+}
+.save-task-button-container {
+  padding: 10px;
+}
+
+.button-save {
   position: relative;
-  display: grid;
-  grid-template-columns: auto auto 1fr auto auto;
+  left: 50%;
+  transform: translate(-50%, 0);
+  padding: 5px;
+  border-radius: 30px;
+  width: 100px;
+  border: 1px solid #bebebe;
+  font-family: 'Roboto Slab', serif;
+  font-size: 14px;
 }
 
-.add-task-space {
-  width: 10px;
+.add-task-container {
+  max-width: 100%;
 }
 
-#add-task-input {
+.add-task-input {
+  padding: 20px;
+  font-size: 18px;
+  font-family: 'Roboto Slab', serif;
+  max-width: 756px;
+}
+
+.add-task-input {
   width: 100%;
+}
+
+.text-change-task {
+  text-align: center;
+  font-family: 'Roboto Slab', serif;
+  font-size: 30px;
 }
