--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <div class="main">
-  <app-todo-list></app-todo-list>
-  <!--  <router-outlet></router-outlet>-->
+  <router-outlet></router-outlet>
 </div>
