--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -1,3 +1,14 @@
+.page {
+  display: grid;
+  grid-template-columns: 300px 1fr;
+  grid-template-rows: 85px 1000px;
+}
+
+.navigation-bar {
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+
 header {
   color: #b8cf69;
   background: #3b474c;
@@ -5,6 +16,7 @@ header {
   font-size: 50px;
   text-align: center;
   padding: 10px 0;
+  height: 65px;
 }
 
 #main {
@@ -16,6 +28,7 @@ header {
 }
 
 #column-1 {
+  //height: 20px;
   width: 100%;
 }
 
