--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,4 +1,5 @@
 <div class="navigation-bar">
+  <div class="nav-username"></div>
   <div class="nav-img-container">
     <img
       class="nav-img"
