--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="main">
-  <app-navigation-bar></app-navigation-bar>
+  <!--  <app-navigation-bar></app-navigation-bar>-->
   <router-outlet></router-outlet>
 </div>
