--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
-body {
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+}
+
+html,
+main {
+  width: 100%;
+  height: 100%;
 }
