Реализация навигационной панели и домашней страницы

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,22 @@
-<div class="main-container">
-  <h1>Казино</h1>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet,
-    asperiores cum cumque enim iusto repellendus soluta suscipit veritatis.
-    Commodi corporis facere fugit nobis obcaecati odit quaerat repellat ut
-    voluptas.
-  </p>
+<div class="main-page">
+  <div class="navbar">
+    <app-navigation-bar></app-navigation-bar>
+  </div>
+  <div class="body">
+    <h1>Это главная страница</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi atque
+      consequuntur cupiditate eius fuga ipsum nisi optio, provident rerum
+      sapiente. Aspernatur consequatur corporis officia. Architecto corporis
+      cumque delectus expedita officia, porro quos recusandae repellat, sapiente
+      similique, sint suscipit. Consequatur esse, eveniet exercitationem
+      expedita ipsum iusto laboriosam maiores neque officia praesentium.
+      Accusantium aperiam cumque ducimus eaque facilis harum ipsum natus nobis,
+      odio possimus? Aliquam architecto assumenda atque blanditiis consequuntur
+      cupiditate deleniti doloremque ea error esse eum excepturi expedita harum
+      illo ipsam ipsum iusto laborum libero maiores molestias neque nihil nobis
+      quia, rem repellendus rerum saepe, sed soluta vel voluptate voluptatem
+      voluptatibus.
+    </p>
+  </div>
 </div>
