--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,28 @@
-.main-container {
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap');
+
+.main-page {
   width: 100vw;
   height: 100vh;
+  display: grid;
+  grid-template-rows: 48px auto;
+}
+
+.body {
+  width: 1100px;
+  height: 100%;
+  justify-self: center;
+  padding: 20px 0;
+  margin: 0 20px;
+  color: #222222;
+}
+
+h1 {
+  font-size: 48px;
+  font-weight: 800;
+}
+
+p {
+  font-size: 16px;
+  margin: 20px 0;
+  line-height: 1.56;
 }
