--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<app-navigation-bar></app-navigation-bar>
 <div class="main">
   <div class="login-form" [formGroup]="loginForm">
     <h1>Вход</h1>
