--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,69 +1,71 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
 
-* {
-  font-family: 'Open Sans', sans-serif;
-  color: #1c1c1c;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.main-page {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 48px auto;
+  background: #f5f5f6;
 }
 
-.main {
-  position: absolute;
-  padding: 20px;
-  left: 300px;
-  width: calc(100% - 300px);
+.body {
+  width: 1100px;
+  height: 100%;
+  justify-self: center;
+  padding: 20px 0;
+  margin: 0 20px;
+  color: #222222;
+  display: grid;
 }
 
 .login-form {
-  background: #e9ecef;
-  border-radius: 0.5rem;
-  width: 600px;
-  margin: auto;
-  padding: 20px 40px;
+  justify-self: center;
+  width: 350px;
+  height: min-content;
+  margin: 28px;
+  border-radius: 10px;
+  padding: 20px;
+  background: #ffffff;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
-  margin-bottom: 1rem;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 600;
+  margin-bottom: 20px;
 }
 
 .input-form {
-  display: block;
   width: 100%;
-  padding: 0.5rem;
-  font-size: 1rem;
-  border: 1px solid #ccc;
-  margin-bottom: 1.2rem;
-  border-radius: 0.2rem;
-}
-
-.input-label {
   margin-bottom: 10px;
-}
-
-.btn {
-  display: inline-block;
-  background: #333333;
-  color: #fff;
-  padding: 0.4rem 1.3rem;
-  font-size: 1rem;
-  border: none;
-  cursor: pointer;
-  margin-right: 0.5rem;
-  transition: opacity 0.2s ease-in;
+  padding: 6px 12px;
+  border: 1px solid #d5dddf;
+  border-radius: 2px;
+  font-size: 16px;
   outline: none;
-  border-radius: 0.3rem;
 }
-
-.btn:hover {
-  opacity: 75%;
+.btn {
+  width: 100%;
+  margin-top: 10px;
+  padding: 12px;
+  border: 0;
+  border-radius: 5px;
+  background: #ffdd2d;
+  font-size: 16px;
+  cursor: pointer;
 }
 
 .btn:disabled {
-  opacity: 10%;
+  cursor: initial;
+  opacity: 50%;
+}
+
+.btn:hover {
+  background: #ffcd33;
 }
 
 .login-error-text {
   color: red;
-  margin: 10px 0;
+  margin-top: 20px;
 }
